--- a/package.json
+++ b/package.json
@@ -24,22 +24,25 @@
     "cssnext": "1.8.4",
     "d3": "3.5.6",
     "is-image": "1.0.1",
-    "normalize.css": "3.0.3"
+    "normalize.css": "3.0.3",
+    "parse-github-url": "0.2.1"
   },
   "gitbook": {
     "properties": {
       "logo": {
         "type": "string",
         "default": "",
-        "required": true,
         "description": "The path to the site logo."
       },
       "color": {
         "type": "string",
         "default": "#a2195b",
-        "required": true,
         "description": "The base color of the site."
       }
-    }
+    },
+    "required": [
+      "logo",
+      "color"
+    ]
   }
 }
