--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
   },
   "homepage": "https://github.com/zambezi-websdk/gitbook-plugin-zambezi-docs#readme",
   "dependencies": {
+    "babelify": "6.4.0",
+    "browserify": "12.0.1",
     "cssnext": "1.8.4",
     "d3": "3.5.6",
     "is-image": "1.0.1",
+    "mousetrap": "1.5.3",
     "normalize.css": "3.0.3",
     "parse-github-url": "0.2.1"
   },
