--- a/package.json
+++ b/package.json
@@ -21,14 +21,20 @@
   },
   "homepage": "https://github.com/zambezi-websdk/gitbook-plugin-zambezi-docs#readme",
   "dependencies": {
+    "autoprefixer": "6.0.3",
     "babelify": "6.4.0",
     "browserify": "12.0.1",
-    "cssnext": "1.8.4",
     "d3": "3.5.6",
     "is-image": "1.0.1",
     "mousetrap": "1.5.3",
     "normalize.css": "3.0.3",
-    "parse-github-url": "0.2.1"
+    "parse-github-url": "0.2.1",
+    "pixrem": "3.0.0",
+    "postcss": "5.0.10",
+    "postcss-calc": "5.0.0",
+    "postcss-custom-properties": "5.0.0",
+    "postcss-import": "7.1.0",
+    "postcss-pseudoelements": "3.0.0"
   },
   "gitbook": {
     "properties": {
