--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "babelify": "6.4.0",
     "browserify": "12.0.1",
     "d3": "3.5.6",
+    "git-branch": "0.3.0",
     "is-image": "1.0.1",
     "mousetrap": "1.5.3",
     "normalize.css": "3.0.3",
+    "parse-git-config": "0.3.1",
     "parse-github-url": "0.2.1",
     "pixrem": "3.0.0",
     "postcss": "5.0.10",
