Replace logo reference in README with img in template
This will only work for logos added with markdown embedding, and
is a bit of a hack, honestly. We may want to do this after the
markdown has been parsed and rendered, by using cheerio or some
other dom processing library.

The logo is added in the build, and added to the css as well for
the use of the logo in the summary – this fixes #15. The first H1
heading of the readme will be used as the main title of the project.

--- a/package.json
+++ b/package.json
@@ -31,12 +31,9 @@
     "normalize.css": "3.0.3",
     "parse-git-config": "0.3.1",
     "parse-github-url": "0.2.1",
-    "pixrem": "3.0.0",
     "postcss": "5.0.10",
-    "postcss-calc": "5.0.0",
-    "postcss-custom-properties": "5.0.0",
-    "postcss-import": "7.1.0",
-    "postcss-pseudoelements": "3.0.0"
+    "postcss-cssnext": "2.2.0",
+    "postcss-import": "7.1.0"
   },
   "gitbook": {
     "properties": {
