Use Object.assign and Promise polyfills if necessary

--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "is-image": "1.0.1",
     "mousetrap": "1.5.3",
     "normalize.css": "3.0.3",
+    "object-assign": "4.0.1",
     "parse-git-config": "0.3.1",
     "parse-github-url": "0.2.1",
+    "pinkie-promise": "2.0.0",
     "postcss": "5.0.10",
     "postcss-cssnext": "2.2.0",
     "postcss-import": "7.1.2"
