--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "object-assign": "4.0.1",
     "parse-git-config": "0.3.1",
     "parse-github-url": "0.2.1",
-    "pinkie-promise": "2.0.0",
+    "promise": "7.0.4",
     "postcss": "5.0.10",
     "postcss-cssnext": "2.2.0",
     "postcss-import": "7.1.2"
