--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gitbook-plugin-zambezi-docs",
+  "name": "@zambezi/gitbook-plugin-zambezi-docs",
   "version": "0.1.2",
   "description": "Zambezi Documentation Site Generator for GitBook",
   "main": "index.js",
